# fastpi_todo_practice

./: .env.example  .gitignore  README.md  alembic.ini  app.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_11_06_12_45_add_auth_models.py  2025_11_06_12_46_add_auth_relationships.py  2026_01_02_18_47_add_organization_access_request.py  2026_01_06_16_18_make_member_organization_relationship_m2m.py  2026_01_22_14_58_add_todo_models.py  2026_01_26_15_43_add_board_column_task.py  df443dd65d9c_add_auth_models.py
scripts/: create_db.sql  setup_db.sql
src/: main.py
src/auth/: __init__.py  dependency_injection.py  dto.py  exceptions.py  models.py  query_params.py  repositories.py  services.py  views.py
src/config/: __init__.py  config.py
src/core/: __init__.py  app.py  auth.py  config.py  db.py  exceptions.py
src/todo/: constants.py  dto.py  models.py  repositories.py  services.py  views.py
tests/integration/: conftest.py  test_e2e.py  test_model_relationships.py  test_repositories.py  test_tests.py
tests/unit/: test_services.py  test_views.py
